style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    color: #ffffff;
    background-color: #1a1a1a;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.container{
   background-color: #2d2d2d;
   padding: 40px;
   border-radius: 10px;    
   box-shadow: 0 4px 10px rgba(0,0,0,0.5); 
   text-align: center;
}

/* ---- INPUT GROUP DESIGN ---- */
.input-group{
    display: flex;
    flex-direction: column;
    margin: 20px;
    text-align: let;
}
.input-group label{
    font-size: 14px;
    margin-bottom: 5px;
    color: #cccccc;
}

.input-group input{
 width: 100%;  
 padding: 12px;
 background-color: #333333;
 border: none;
 color: #ffffff;
 border-radius: 5px; 
 font-size: 16px;
}
.input-group input:focus{
    outline: none;
    border: 2px solid #007bff;
}

/* ---- STRENGTH METER DESIGN ---- */

.strength-meter{
    width: 100%;
    height: 8px;
    background-color: #444444;
    border-radius: 4px;
    margin-bottom: 20px;
    overflow: hidden;
}
.bar{
    width: 0%;
    height: 100%;
    background-color: #ff4d4d;
    transition: width 0.3s ease, background-color 0.3s ease;
}
/* ---- RULES LIST DESIGN ---- */
.rules-list{
    list-style: none;
    text-align: left;
    font-size: 14px;
}
.rules-list li{
    margin-bottom: 8px;
    color: #ff4d4d;
    transition: color 0.3s ease;
}

